# SPLN

./: README.md  folders.py
TPC1/: README.md
TPC2/: README.md
TPC3/: README.md
TPC4/: README.md
TPC4/ftk/: .gitignore  pyproject.toml
TPC4/ftk/ftk/: __main__.py  base.py  corpus.py  freq.py  mains.py  probability.py
TPC4/ftk/tests/: test_t1.py
TPC5/: README.md
TPC6/: README.md
TPC7/: ReadMe.md
